@@ -213,6 +213,16 @@ Info: This package includes a *.so file in <tt>/usr/lib/phpN</tt>
  .
  echo "php:Depends=phpapi-$(php-config5 --phpapi)" &gt; debian/substvars
 
+Tag: missing-dependency-on-numpy-abi
+Severity: serious
+Certainty: possible
+Info: This package includes a Python extension module, which uses Numpy via its
+ binary interface. Such packages must depend on python-numpy-abi<i>N</i>.
+ .
+ If the package is using debhelper, this problem is usually due to a
+ missing dh_numpy call in <tt>debian/rules</tt>.
+Ref: /usr/share/doc/python-numpy/README.DebianMaints
+
 Tag: debug-file-should-use-detached-symbols
 Severity: normal
 Certainty: certain
