@@ -45,6 +45,8 @@ Build-Depends: binutils,
                perl,
                perl (>= 5.12) | libtest-simple-perl (>= 0.93),
                python,
+               python-all-dev,
+               python-numpy,
                quilt,
                rsync,
                unzip,
