@@ -1,0 +1,7 @@
+#include <Python.h>
+#include <numpy/arrayobject.h>
+
+void do_import_array(void)
+{
+	import_array();
+}
