@@ -1,0 +1,6 @@
+#!/usr/bin/make -f
+
+%:
+	dh $@
+
+override_dh_pysupport:
