@@ -1,0 +1,5 @@
+import distutils.core
+
+distutils.core.setup(
+	ext_modules=[distutils.core.Extension('basic', ['basic.c'])]
+)
