@@ -1,0 +1,7 @@
+Testname: binaries-missing-depends-on-numpy-abi
+Sequence: 6000
+Version: 1.0
+Description: Test for missing dependency on python-numpy-abiN
+Architecture: any
+Test-For:
+ missing-dependency-on-numpy-abi
