@@ -1,0 +1,1 @@
+E: binaries-missing-depends-on-numpy-abi: missing-dependency-on-numpy-abi
